cmake_minimum_required(VERSION 3.8)
project(olliOS)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        kernel/alloc/BucketAlloc.cpp
        kernel/alloc/BucketAlloc.h
        kernel/alloc/LinearAlloc.cpp
        kernel/alloc/LinearAlloc.h
        kernel/devices/ata/ata.cpp
        kernel/devices/ata/ata.h
        kernel/devices/ata/atadevice.cpp
        kernel/devices/ata/atadevice.h
        kernel/devices/ata/atapacketdevice.cpp
        kernel/devices/ata/atapacketdevice.h
        kernel/devices/ata/atapiodevice.cpp
        kernel/devices/ata/atapiodevice.h
        kernel/devices/pci/pci.cpp
        kernel/devices/pci/pci.h
        kernel/devices/pci/pcidevice.cpp
        kernel/devices/pci/pcidevice.h
        kernel/devices/pci/pciide.cpp
        kernel/devices/pci/pciide.h
        kernel/devices/blockdevice.cpp
        kernel/devices/blockdevice.h
        kernel/devices/device.cpp
        kernel/devices/device.h
        kernel/devices/keyboard.cpp
        kernel/devices/keyboard.h
        kernel/devices/memorystream.cpp
        kernel/devices/memorystream.h
        kernel/devices/serial.cpp
        kernel/devices/serial.h
        kernel/devices/vga.cpp
        kernel/devices/vga.h
        kernel/fs/filesystem.cpp
        kernel/fs/filesystem.h
        kernel/fs/iso9660.cpp
        kernel/fs/iso9660.h
        kernel/fs/virtualfilesystem.cpp
        kernel/fs/virtualfilesystem.h
        kernel/kstd/algorithm.h
        kernel/kstd/cstddef.h
        kernel/kstd/functional.h
        kernel/kstd/new.cpp
        kernel/kstd/new.h
        kernel/kstd/optional.h
        kernel/kstd/string.cpp
        kernel/kstd/string.h
        kernel/kstd/type_traits.h
        kernel/kstd/unordered_map.h
        kernel/kstd/utility.h
        kernel/kstd/vector.h
        kernel/memory/physical.cpp
        kernel/memory/physical.h
        kernel/memory/virtual.cpp
        kernel/memory/virtual.h
        kernel/util/inputformatter.cpp
        kernel/util/inputformatter.h
        kernel/util/linkedlist.cpp
        kernel/util/linkedlist.h
        kernel/util/rtti.cpp
        kernel/util/rtti.h
        kernel/util/singleton.h
        kernel/abi.cpp
        kernel/abi.h
        kernel/acpi.cpp
        kernel/acpi.h
        kernel/alloc.cpp
        kernel/alloc.h
        kernel/apic.cpp
        kernel/apic.h
        kernel/boot.s
        kernel/cdefs.h
        kernel/cpu.cpp
        kernel/cpu.h
        kernel/cpuid.cpp
        kernel/cpuid.h
        kernel/crti.s
        kernel/crtn.s
        kernel/descriptor.cpp
        kernel/descriptor.h
        kernel/descriptor_asm.s
        kernel/devicemanager.cpp
        kernel/devicemanager.h
        kernel/environment.cpp
        kernel/environment.h
        kernel/gdt.cpp
        kernel/gdt.h
        kernel/interrupt.cpp
        kernel/interrupt.h
        kernel/interrupt_asm.s
        kernel/interruptHandlers.cpp
        kernel/interruptHandlers.h
        kernel/io.cpp
        kernel/io.h
        kernel/kernelshell.cpp
        kernel/kernelshell.h
        kernel/linker.h
        kernel/linker.ld
        kernel/main.cpp
        kernel/multiboot.h
        kernel/options.h
        kernel/pic.cpp
        kernel/pic.h
        kernel/types.h
        libk/include/stdio.h
        libk/include/stdlib.h
        libk/include/string.h
        libk/stdio/fseek.c
        libk/stdio/printf.c
        libk/stdio/putchar.c
        libk/stdio/stdio.c
        libk/stdlib/calloc.c
        libk/stdlib/free.c
        libk/stdlib/malloc.c
        libk/stdlib/realloc.c
        libk/string/memcmp.c
        libk/string/memcpy.c
        libk/string/memmove.c
        libk/string/memset.c
        libk/string/strcmp.c
        libk/string/strcpy.c
        libk/string/strcspn.c
        libk/string/strlen.c
        libk/string/strtok_r.c)

include_directories(ollios kernel)

add_executable(olliOS ${SOURCE_FILES})